--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .intro {
-    background-image: url(https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/backgrounds/h_img.jpg);
+    background-image: url(assets/backgrounds/h_img.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -57,7 +57,7 @@ h5 {
 
 
 .services {
-    background-image: url(https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/backgrounds/s_image.jpg);
+    background-image: url(assets/backgrounds/s_image.jpg);
     background-size: cover;
     background-position: center;
 
@@ -92,7 +92,7 @@ h5 {
 }
 
 .form-section {
-    background-image: url(https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/backgrounds/c_image.jpg);
+    background-image: url(assets/backgrounds/c_image.jpg);
     background-position: center;
     background-size: cover;
     color: white;
@@ -124,7 +124,7 @@ h5 {
 
 footer {
     background-color: #FEFFE2;
-    height: 45vh;
+    height: 30vh;
 }
 
 .delani-footer {
